# rlibc

./: .gitignore  Cargo.toml  README.md  test.sh
c/: header.h  main.c  printc.h
src/: lib.rs  syscall.rs
