[package]
name = "rlibc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[lib]
name = "rlibc"
crate-type = ["cdylib"]

[dependencies]
heapless = "0.7.16"

[features]
std = []
alloc = []
core = []
