[package]
name = "rlibc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[lib]
name = "rlibc"
crate-type = ["cdylib"]

[dependencies]
heapless = "0.7.16"
libc-print = "0.1.21"
smoltcp = { version = "0.9.1", default-features = false, features=['alloc', 'socket-raw', 'socket-udp', 'socket-tcp', 'socket-icmp', 'socket-dhcpv4', 'socket-dns', 'proto-ipv4', 'proto-ipv6'] }
tikv-jemallocator = "0.5.0"

[features]
std = []
alloc = []
core = []
